revert java parameter changes when running tests