@@ -373,7 +373,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.17</version>
                     <configuration>
-                        <argLine>-Xmx8G -Xms4G -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC</argLine>
+                        <argLine>-Xmx2048m -Xms1024m -XX:MaxPermSize=512m</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
